atualizei o exercício ex022

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -30,6 +30,12 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus aperiam, sit repellendus dignissimos eligendi adipisci amet architecto, quos quisquam veritatis, consequuntur harum ratione ipsam atque iure iusto! Rerum, necessitatibus labore.
         Corrupti reiciendis accusantium voluptate fugit eligendi ipsam architecto, corporis perferendis! Blanditiis eum soluta nobis numquam nesciunt ducimus earum magnam ad incidunt beatae minus, magni hic mollitia repudiandae tempore vel. Fugit!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus aperiam, sit repellendus dignissimos eligendi adipisci amet architecto, quos quisquam veritatis, consequuntur harum ratione ipsam atque iure iusto! Rerum, necessitatibus labore.
+        Corrupti reiciendis accusantium voluptate fugit eligendi ipsam architecto, corporis perferendis! Blanditiis eum soluta nobis numquam nesciunt ducimus earum magnam ad incidunt beatae minus, magni hic mollitia repudiandae tempore vel. Fugit!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus aperiam, sit repellendus dignissimos eligendi adipisci amet architecto, quos quisquam veritatis, consequuntur harum ratione ipsam atque iure iusto! Rerum, necessitatibus labore.
+        Corrupti reiciendis accusantium voluptate fugit eligendi ipsam architecto, corporis perferendis! Blanditiis eum soluta nobis numquam nesciunt ducimus earum magnam ad incidunt beatae minus, magni hic mollitia repudiandae tempore vel. Fugit!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus aperiam, sit repellendus dignissimos eligendi adipisci amet architecto, quos quisquam veritatis, consequuntur harum ratione ipsam atque iure iusto! Rerum, necessitatibus labore.
+        Corrupti reiciendis accusantium voluptate fugit eligendi ipsam architecto, corporis perferendis! Blanditiis eum soluta nobis numquam nesciunt ducimus earum magnam ad incidunt beatae minus, magni hic mollitia repudiandae tempore vel. Fugit!</p>
     </main>
 </body>
 </html>
