--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -30,7 +30,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam doloremque alias, fugit omnis enim odit aliquid aperiam quis officia laboriosam rerum animi similique assumenda numquam minima dicta labore cumque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam corporis, natus ex dolore harum eos rem, cum rerum laboriosam eius nam soluta fugiat, ullam quas! Quidem numquam dignissimos fuga velit!</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum cum nobis ullam at rerum, eum iste. Magni quis earum tempore non! Alias at ducimus id voluptatibus corrupti. Modi, maiores.</p><img src='imagens/unnamed.jpg'">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
 
 
