--- a/exercicios/ex025/form004.html
+++ b/exercicios/ex025/form004.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on"></form>
+    <form action="cadastro.php" method="get" autocomplete="on">
         <fieldset>
             <legend>Dados Pessoais</legend>
             <p>
@@ -27,5 +27,6 @@
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
+    </form>
 </body>
 </html>
