--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -7,16 +7,18 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="post" autocomplete="on"></form>
-    <p>
-        <label for="iusu">Usúario:</label>
-        <input type="text" name="usu" id="isus" required minlength="5" maxlength="15" size="10" placeholder="nome do Usúario" autocomplete="username">
-    </p>
-    <p>
-        <label for="isen">Senha:</label>
-        <input type="password" name="sen" id="isen" required minlength="8" maxlength="20" size="8" placeholder="mínimo 8 letras" autocomplete="current-password">
-    </p>
-    <input type="submit" value="Enviar">
-    <input type="reset" value="Limpar">
+    <form action="cadastro.php" method="post" autocomplete="on">
+        <p>
+            <label for="iusu">Usúario:</label>
+            <input type="text" name="usu" id="isus" required minlength="5" maxlength="15" size="10" placeholder="nome do Usúario" autocomplete="username">
+        </p>
+        <p>
+            <label for="isen">Senha:</label>
+            <input type="password" name="sen" id="isen" required minlength="8" maxlength="20" size="8" placeholder="mínimo 8 letras" autocomplete="current-password">
+        </p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+    </form>
 </body>
 </html>
