--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -20,11 +20,11 @@
             <input type="checkbox" name="esbas" id="iesbas">
             <label for="iesbas">Basquete</label><br>
             <input type="checkbox" name="esfut" id="iesfut">
-            <label for="esfut">Futebol</label><br>
+            <label for="iesfut">Futebol</label><br>
             <input type="checkbox" name="esnat" id="iesnat">
-            <label for="esnat">Natação</label><br>
+            <label for="iesnat">Natação</label><br>
             <input type="checkbox" name="esten" id="iesten">
-            <label for="esten">Tênis</label><br>
+            <label for="iesten">Tênis</label><br>
         </fieldset>
 
         <p>
