--- a/exercicios/ex025/form006.html
+++ b/exercicios/ex025/form006.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php" method="post" autocomplete="on"></form>
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="icor">Cor:</label>
             <input type="color" name="cor" id="icor" value="#00ff00">
@@ -27,5 +27,6 @@
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
+    </form>
 </body>
 </html>
