--- a/exercicios/ex025/form007.html
+++ b/exercicios/ex025/form007.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php" method="post" autocomplete="on"></form>
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iest">Estado:</label>
             <select name="Estado" id="iest">
@@ -38,12 +38,13 @@
             </datalist>
         </p>
         <p>
-            <label for="imsg">Mensagem:</label>br
+            <label for="imsg">Mensagem:</label><br>
             <textarea name="masg" id="imsg" cols="30" rows="10"></textarea>
         </p>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
+    </form>
 </body>
 </html>
