--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+            <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -30,5 +34,15 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo molestias doloribus, nihil facere, cumque debitis hic aut libero officia quae voluptatem ad, autem animi eveniet quos quam optio fugiat vel! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolor nemo cum necessitatibus quae corporis magnam numquam labore voluptas, quidem itaque porro officiis. Error ipsum expedita aliquid vitae ex! Alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nulla libero rerum dicta officiis impedit, quos temporibus quod. Quia facere harum perspiciatis provident. Laudantium non reiciendis laborum, eum magnam quo.</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            itens.style.display = 'block'
+                if (itens.style.display == 'block') {
+                    itens.style.display = 'none'
+                } else {
+                    itens.style.display = 'block'
+                }
+        }
+    </script>
 </body>
 </html>
