--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -36,10 +36,9 @@
     </main>
     <script>
         function clickMenu() {
-            itens.style.display = 'block'
-                if (itens.style.display == 'block') {
-                    itens.style.display = 'none'
-                } else {
+             if (itens.style.display =='block') {
+                (itens.style.display = 'none')
+              } else {
                     itens.style.display = 'block'
                 }
         }
